Fix IE extended links on mobile

--- a/source/assets/stylesheets/ie10_fixes.scss
+++ b/source/assets/stylesheets/ie10_fixes.scss
@@ -15,3 +15,10 @@
     margin-top: 0;
   }
 }
+
+// Fix too extended links on mobile - IE doesn't break nested elements
+.blog-content {
+  p {
+    -ms-word-wrap: break-word;
+  }
+}
